--- a/amplify.yml
+++ b/amplify.yml
@@ -8,6 +8,20 @@ frontend:
         build:
             commands:
                 - 'npm run build' # Build the frontend
+                - echo "Frontend build completed. Starting backend deployment..."
+                # Write PEM key to a temporary file
+                - echo "$EC2_PEM_KEY" > ec2-key.pem
+                - chmod 600 ec2-key.pem
+                # Copy backend files to EC2
+                - scp -i ec2-key.pem -r ../backend/* ec2-user@$EC2_PUBLIC_IP:/home/ec2-user/backend/
+                # SSH into EC2 to set up and restart the backend
+                - ssh -i ec2-key.pem ec2-user@$EC2_PUBLIC_IP << EOF
+                    cd /home/ec2-user/backend/
+                    npm install
+                    pm2 restart index.js || pm2 start index.js
+                  EOF
+                # Remove the temporary PEM file
+                - rm -f ec2-key.pem
     artifacts:
         baseDirectory: frontend/build
         files:
@@ -15,20 +29,3 @@ frontend:
     cache:
         paths:
             - 'frontend/node_modules/**/*'
-    deploy:
-        commands:
-            # Deploy the frontend
-            - echo "Frontend deployment completed. Starting backend deployment..."
-            # Write PEM key to a temporary file
-            - 'echo "$EC2_PEM_KEY" > ec2-key.pem'
-            - 'chmod 600 ec2-key.pem'
-            # Copy backend files to EC2
-            - 'scp -i ec2-key.pem -r backend/* ec2-user@$EC2_PUBLIC_IP:/home/ec2-user/backend/'
-            # SSH into EC2 to set up and restart the backend
-            - 'ssh -i ec2-key.pem ec2-user@$EC2_PUBLIC_IP << EOF
-                cd /home/ec2-user/backend/
-                npm install
-                pm2 restart index.js || pm2 start index.js
-              EOF'
-            # Remove the temporary PEM file
-            - 'rm -f ec2-key.pem'
