--- a/amplify.yml
+++ b/amplify.yml
@@ -4,7 +4,7 @@ frontend:
         preBuild:
             commands:
                 - 'cd frontend'
-                - 'npm install' # Install frontend dependencies
+                - 'npm install' # Install frontend dependencie
         build:
             commands:
                 - 'npm run build' # Build the frontend
