--- a/amplify.yml
+++ b/amplify.yml
@@ -13,9 +13,9 @@ frontend:
                 - echo "$EC2_PEM_KEY" > ec2-key.pem
                 - chmod 600 ec2-key.pem
                 # Copy backend files to EC2
-                - scp -i ec2-key.pem -r ../backend/* ec2-user@$EC2_PUBLIC_IP:/home/ec2-user/backend/
+                - scp -o StrictHostKeyChecking=no -i ec2-key.pem -r ../backend/* ec2-user@$EC2_PUBLIC_IP:/home/ec2-user/backend/
                 # SSH into EC2 to set up and restart the backend
-                - ssh -i ec2-key.pem ec2-user@$EC2_PUBLIC_IP << EOF
+                - ssh -o StrictHostKeyChecking=no -i ec2-key.pem ec2-user@$EC2_PUBLIC_IP << EOF
                     cd /home/ec2-user/backend/
                     npm install
                     pm2 restart index.js || pm2 start index.js
