--- a/amplify.yml
+++ b/amplify.yml
@@ -10,12 +10,12 @@ frontend:
                 - 'npm run build' # Build the frontend
                 - echo "Frontend build completed. Starting backend deployment..."
                 # Write PEM key to a temporary file
-                - echo "$EC2_PEM_KEY" > ec2-key.txt
+                - printf "%b" "$EC2_PEM_KEY" > ec2-key.txt
                 - chmod 600 ec2-key.txt
                 # Copy backend files to EC2
-                - scp -o StrictHostKeyChecking=no -i ec2-key.txt -r ../backend/* ec2-user@$EC2_PUBLIC_IP:/home/ec2-user/backend/
+                - scp -v -o StrictHostKeyChecking=no -i ec2-key.txt -r ../backend/* ec2-user@$EC2_PUBLIC_IP:/home/ec2-user/backend/
                 # SSH into EC2 to set up and restart the backend
-                - ssh -o StrictHostKeyChecking=no -i ec2-key.txt ec2-user@$EC2_PUBLIC_IP << EOF
+                - ssh -v -o StrictHostKeyChecking=no -i ec2-key.txt ec2-user@$EC2_PUBLIC_IP << EOF
                     cd /home/ec2-user/backend/
                     npm install
                     pm2 restart index.js || pm2 start index.js
